--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,6 @@
 	display: flex;
 	justify-content: space-evenly;
 	list-style: none;
-	align-items: center;
-
 }
 
 /* end Flexbox Part 1 */
@@ -14,6 +12,8 @@
 /* Flexbox Part 2 */
 
 #flex-section2 ul {
+	display: flex;
+	list-style: none;
 
 }
 
