--- a/styles.css
+++ b/styles.css
@@ -14,23 +14,22 @@
 #flex-section2 ul {
 	display: flex;
 	list-style: none;
-
 }
 
 #flex-section2 li {
-
+	flex: 1;
 }
 
 #flex-section2 .item1 {
-
+	order: 1;
 }
 
 #flex-section2 .item2 {
-
+	order: 3;
 }
 
 #flex-section2 .item3 {
-
+	order: 2;
 }
 
 /* end Flexbox Part 2 */
