--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,10 @@
 /* Flexbox Part 3 */
 
 #flex-section3 .box {
-
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
 }
 
 #flex-section3 .tags ul {
