--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,16 @@
 
 #flex-section3 .box {
 	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #flex-section3 .tags ul {
 	display: flex; 
 	list-style: none;
 	flex-wrap: wrap;
+	margin: 0;
+	padding: 0;
 }
 
 /* end Flexbox Part 3 */
