--- a/styles.css
+++ b/styles.css
@@ -69,13 +69,13 @@
 /* Grid Part 2 */
 
 #grid-section2 .gridboxblue {
-	grid-column: 2 / 3;
-	grid-row: 2 / 3;
+	grid-column: 2 / span 3;
+	grid-row: 2 / span 3;
 }
 
 #grid-section2 .gridboxred {
-	grid-column: 1 / 4;
-	grid-row: 1 / 4;
+	grid-column: 1 / span 2;
+	grid-row: 2 / 3;
 }
 
 /* end Grid Part 2 */
