small row change and z-index for overlap

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,8 @@
 
 #grid-section2 .gridboxblue {
 	grid-column: 2 / span 3;
-	grid-row: 2 / span 3;
+	grid-row: 1 / span 3;
+	z-index: 1;
 }
 
 #grid-section2 .gridboxred {
