--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@
 
 #grid-section3 .box1 {
 	grid-column: 1 / span 3;
-	grid-row: 1 / 3;
+	grid-row: 1;
 }
 
 #grid-section3 .box2 {
@@ -109,7 +109,7 @@
 
 #grid-section3 .box4 {
 	grid-column: 1 / span 3;
-	grid-row: 3 / 3;
+	grid-row: 3;
 }
 
 /* end Grid Part 3 */
