--- a/styles.css
+++ b/styles.css
@@ -98,13 +98,13 @@
 }
 
 #grid-section3 .box2 {
-	grid-column: 1 / span 2;
-	grid-row: 2 / 3;
+	grid-column: 3;
+	grid-row: 2;
 }
 
 #grid-section3 .box3 {
 	grid-column: 1 / 3;
-	grid-row: 2 / 3;
+	grid-row: 2;
 }
 
 #grid-section3 .box4 {
