--- a/styles.css
+++ b/styles.css
@@ -93,23 +93,23 @@
 }
 
 #grid-section3 .box1 {
-	grid-column: 1 / span 3;
-	grid-row: 1;
+	grid-column: 1 / 3;
+	grid-row: 1 / 2;
 }
 
 #grid-section3 .box2 {
-	grid-column: 3;
-	grid-row: 2;
+	grid-column: 2 / 3;
+	grid-row: 2 / 3;
 }
 
 #grid-section3 .box3 {
-	grid-column: 1 / 3;
-	grid-row: 2;
+	grid-column: 1 / 2;
+	grid-row: 2 / 3;
 }
 
 #grid-section3 .box4 {
-	grid-column: 1 / span 3;
-	grid-row: 3;
+	grid-column: 1 / 3;
+	grid-row: 3 / 4;
 }
 
 /* end Grid Part 3 */
